ajout du style de  l'element sous-image-dog

--- a/main.css/style.css
+++ b/main.css/style.css
@@ -10,3 +10,13 @@ body{
     transform: rotate(0deg);
 
 }
+.sous-image-dog{
+    width: 634.9999887035946;
+height: 634.9999887035946;
+top: 180px;
+left: 595px;
+transform: rotate(-25.23 deg);
+opacity: 1;
+border-radius: 99px;
+
+}
